@@ -1,5 +1,9 @@
 	20100323 (Till Straumann):
 
+	* BLDApp/src/BLDMCast.c: removed inclusion of unnecessary headers.
+
+	20100323 (Till Straumann):
+
 	* BLDApp/src/BLDMCast.c, BLDApp/src/BLDMCast.h:
 	Moved non-public declarations and in particular, definition of 'static' variables
 	from BLDMCast.h -> BLDMCast.c.
